# image-gs

./: .gitignore  LICENSE  README.md  environment.yml  main.py  model.py  pyproject.toml
.github/: copilot-instructions.md
assets/docs/: image-gs.bib
cfgs/: default.yaml
gsplat/: pyproject.toml
gsplat/gsplat/: __init__.py  project_gaussians_2d_scale_rot.py  rasterize_no_tiles.py  rasterize_sum.py  utils.py
gsplat/gsplat/cuda/: __init__.py  _backend.py
utils/: flip.py  image_utils.py  misc_utils.py  quantization_utils.py  saliency_utils.py
utils/saliency/: decoder.py  resnet.py
