[project]
name = "image-gs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "gsplat",
  'torch==2.9.0+cu130',
  'torchvision==0.24.0+cu130',
  'torchaudio==2.9.0+cu130',
  "flip-evaluator>=1.6.0.1",
  "lpips>=0.1.4",
  "matplotlib>=3.10.7",
  "numpy>=2.3.4",
  "opencv-python>=4.11.0.86",
  "scikit-image>=0.25.2",
  "scipy>=1.16.2",
]

[tool.uv.sources]
gsplat = [{ path = "./gsplat" }]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
torchaudio = [{ index = "pytorch-cu130" }]


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
